--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,12 @@ dependencies:
   camera: ^0.10.5+4
   flutter:
     sdk: flutter
+  image: ^3.0.1
   path: ^1.8.3
   path_provider: ^2.1.1
-  saver_gallery: ^3.0.1
+  saver_gallery: ^3.0.0
+
+
 
 dev_dependencies:
   flutter_test:
